# aget_project

./: LICENSE  README.md  all_agent.py  app.py  langgraph.json  requirements.txt
base/: config.py
conn/: gen_img.py  llm.py  minio_conn.py
content/: all_agent.py
content/mcps/: excel_mcp.py  ppt_mcp.py  travily_search.py
content/middles/: excute_middle.py  file_manager_middle.py  minio_middle.py  my_skill_middle.py  wait_rate_limit.py
content/mytools/: gen_image.py  globle_tools.py  read_doc_tools.py  vlm_tool.py  write_doc_tools.py
content/others/: mybackend.py  mybackend_easy.py
content/subagents/: excel_agent.py  ppt_agent.py
content/utils/: runtime_util.py
docker/: .dockerignore  .env.example  .env.example.zh  Dockerfile  docker-compose.build.yml  docker-compose.yml
study/codes/langchain_v10/1_basic/: 1_创建智能体.py  2_工具函数(装饰器模式).py  2_工具调用(注释模式).py  4.1_function_calling.py  4.2_ReAct.py  5_结构化输出.py  6(练习)_流式输出(多模式并用效果美观）.py  6_流式输出.py  (+3 more)
sub_projects/agent-chat-ui/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  readme.md
sub_projects/agent-chat-ui/src/: config.ts
sub_projects/pptx-mcp/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  server.py
sub_projects/pptx-mcp/agent_examples/adk/: README.md  pyproject.toml
sub_projects/pptx-mcp/agent_examples/adk/agent/: agent.py
sub_projects/pptx-mcp/tests/: test_server.py
utils/doc_utils/: base64_utils.py  download_utils.py  markitdown_utils.py  os_utils.py  zip_files.py
utils/general_utils/: globle_util.py  loggers.py
utils/langchain_utils/: common_utils.py  stream_util.py
(+91 files in other folders)
